A New Update to the Winter 2025 Edition
This includes an improved cover, new content, and some other things. Most of the updates are in the arguments regarding the existence of God.

--- a/modnine.tex
+++ b/modnine.tex
@@ -25,7 +25,7 @@ If you only have the first one, then you will not get cases of, say, doctor assi
 
 \section{Part \thechapcount.\theseccount: Is it morally permissible to have an abortion?}\stepcounter{seccount}
 
-I get that this is a hot issue, and if I have not already, I guess that I will need to be far more active in the comments in the discussion for this one than I already have been, please remember to be civil. For Warren, the moral status of abortion hinges on the answer to the following question:
+For Warren, Pruss, and pretty much anyone else with some manner of interest in whether abortion is permissible, the main question is not actually an ethical one, but rather a metaphysical one. The question is: 
 
 \begin{center}
 The Fetus Question: Is a fetus a person, in the morally relevant sense?
@@ -80,7 +80,7 @@ The Pro-Life Response to Argument A:&The Pro-Life Response to Argument B:\\
 
 The Pro-Life Response to Argument A , in their eyes, takes out the reasoning for the second line of Argument A. This is basically showing that there are some cases where the moral status of some behavior is not determined by the consequences. This can be supported by the very definition of murder, which is wrongful intentional killing. This kind of argument falls into the non-consequentialist style thinking and the basis there is that something are wrong regardless of the consequences. This will show up several times, the pro-life side of the debate tends to give reasons rooted in non-consequentialist style thinking. There is another pro-choice reply to this, which debates the idea that the abortion is murder in this case, further deepening the divide between the intuitions (because the reasonable response is more strongly consequentialist) 
 
-The second argument given by the pro-choicers is exemplified by Argument B. This one uses a more non-consequentialist/Kantian style reasoning, pointing out that denying a woman the ability is have an abortion is to deprive her of some manner of bodily right. For example, the right to choose when and how one bears young. This one also falls short. The Pro-Life Response to Argument B shows where this falls short. They are basically saying there that while a person has rights, those rights can't imply that it's OK to violate another's rights. For example, take property rights. It seems clear that a person has the right to remove another from their property and has the right to defend their property, but how far does that right extend? Take this example, which really did happen, but I have exaggerated for our purposes:
+The second argument given by the pro-choicers is exemplified by Argument B. This one uses a more non-consequentialist/Kantian style reasoning, pointing out that denying a woman the ability is have an abortion is to deprive her of some manner of bodily right. For example, the right to choose when and how one bears young. This one also falls short. The Pro-Life Response to Argument B shows where this falls short. They are basically saying there that while a person has rights, those rights can't imply that it's OK to violate another's rights. For example, take property rights. It seems clear that a person has the right to remove another from their property and has the right to defend their property, but how far does that right extend? Take this example, which really did happen,\footnote{There acutally have been several cases of this happening, both in the United States and Australia. For a prime example case, see \citetitle{Ortega1}.} but I have exaggerated for our purposes:
 
 \thoughtex{Piano Wire on the Trail}{A man owns a large piece of property, land, and there's a group of young hooligans who ride their motor bikes on the trails through his land. So, one day, he put up a line of piano wire across one of the trails, at a particular height. As one of the young people rides through the trail, the wire, tight, catches them on the neck and decapitates them.}{pianowire.jpg}{A forest trail with piano wire strung across it.}
 
@@ -116,6 +116,8 @@ The Pro-Life Response to Argument B:&The Pro-Life Case to Stay Plugged In:\\
     \item[4 ] Unplugging from the violinist is violating the violinist's right to life.
     \item[5 ] Therefore, unplugging from the violinist is always wrong.
 \end{earg}\end{tabular}
+
+
 This, as we have seen before, is very strongly non-consequentialist style thinking. But, the vast majority of people would think that it's outrageous to think that there's the moral obligation here to keep the violinist alive. The claim here, roughly, boils down to the idea that the rights of another can't force a person to go above and beyond, take extreme measures, to ensure it. The violinist case shows that there are some cases where a person's bodily rights are stronger than a person's right to life. If there are cases like this for pregnancy, then the pro-lifer, morally, can't hold their position absolutely. It's really good of a person to agree to take on such a sacrifice, especially it was thrust upon them like this, but it seems wrong to say that your refusal is murder. Though he certainly has the right to life, something about this case must be off, removing the obligation. His right to life, in this case, does not force you, morally speaking, to to keep him alive by what ever means necessary; nor does it justify anyone else forcing you to do so. A law that required you to stay in bed with the violinist would clearly be an unjust law, since it is no proper function of the law to force unwilling people to make huge sacrifice for the sake of other people toward whom they have no such prior obligation. The key feature, for the Violinist case, is that you did not give informed consent to be plugged into the violinist. 
 \subsection{What does this case get us? }
 
@@ -305,7 +307,7 @@ Both of these are at the bottom merely because their existence is controversial.
 
 Extraterrestrials will likely have an easier time proving their person-hood than the machines. This is because they will have likely came from a process much like the one humans did. But, it would not surprise me at all if, on the day the first contact is made, there's a group out there who think that they aren't persons, not worthy of our consideration, because they have built into it the idea that person-hood is exclusively human. This, it would seem, would be mistaken. 
 \input{iwasonceafetus}\stepcounter{chapcount}
-\chapter{Part \thechapcount: The Abortion Debate (Pro-Life)}
+\chapter{Part \thechapcount: The Abortion Debate (Pro-Life)}\setcounter{seccount}{1}
 For this module, thus far, we have been looking at one of the best arguments which can be made on the pro-choice side. This argument goes after the core beliefs of the pro-life side. Namely, that if a fetus is a person, then abortion is murder (and thereby wrong) and that a fetus is in fact a person. The argument does not rely on consequentialist reasoning nor on a woman's bodily rights.
 
 For the sake of fairness, I feel that it's appropriate for us to also look at one of the best arguments from the pro-life side.  This is a purely optional reading as you can complete the assignments without reading it. However, it may serve you well if you ever encounter puzzles like this or if you are on the pro-life side of the debate, this paper will give you a far stronger argument for your stance. The paper is called I Was Once a Fetus: That is Why Abortion is Wrong by Alexander Pruss. His argument does not rely on religious beliefs nor on any notions of person-hood (per se). The argument goes like this:
