--- a/modone.tex
+++ b/modone.tex
@@ -1,6 +1,7 @@
 \part{What is Philosophy?}
 \label{ch.modone}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
+
 \chapter{Part \thechapcount: What Philosophy Is and Isn't}
 Philosophy is not just a way of life, it is not just some outlook which a person takes on. It is also not the product of some really deep thinking. Philosophic thought is not philosophy. One does not have a philosophy. That's not how it works. `My philosophy on that is...' is like saying `my science on that is...' What they should say is `my belief is that...' or `I have thought long and hard about it and I think...' Philosophy is critical thinking taken to the ridiculous extreme. Since it is, at its core, thinking, one does not simply study philosophy. Philosophy is an activity, it's something that you do. Doing philosophy involves finding a stance on some issue and then coming up with reasons for that stance. This could be a stance that you hold or it could be the stance that your opposition holds in some debate.\footnote{This would be putting yourself in `their shoes', so to speak, so that you can see where they are coming from and thereby exploit the flaws in their stance.} In order to really truly prove your point, you will want to know why another might believe otherwise and have the skills to show the errors in that reasoning. Engaging in philosophy is how you get the skills to find the errors in the reasoning. 
 
@@ -467,7 +468,7 @@ Empirical thinking is applicable when there isn't anything in the explanation wh
 
  The hypothesis that the angels are making the planets move isn't applicable because it doesn't relate back to experience and evidence. If, in some strange world, we could see the angels sweating and pushing the planets really hard, then it would be. However, we can't see the angels and if someone were to claim that they are there, they are just invisible, the hypothesis would be even more inapplicable.
 
-\input{apology}
+\input{apologyupdate}
 \stepcounter{chapcount}
 \chapter{Part \thechapcount: Life and Times of Socrates}\setcounter{seccount}{1}
 
