--- a/modsix.tex
+++ b/modsix.tex
@@ -60,7 +60,7 @@ For the second section of this meditation, Descartes starts us off by explaining
 
 \factoidbox{Take the beliefs that you got because someone told them to you. But, as we all know, people do sometimes lie or are mistaken about what they are telling others. This means that there is reason to doubt all of the things which you were taught in school, or by your folks, or by other people. Since there is reason to doubt those things, they can’t be the foundation of indubitable knowledge.}
 
-Given the times Descartes was living in, with the rie of empirical science (the idea that knowledge is primarily gained from the senses, through experience and experiments), Descartes wanted to show that the fundamental basis for this knowledge was actually grounded in knowledge you can gain without appealing to your senses, called \emph{a priori} knowledge. So, he turns to whether one can doubt their senses. To get this off the ground, Descartes needs a way of getting rid of knowledge through your senses, as in, knowledge via experience. This means he needs a systematic way of making a worst case scenario (think Murphy's Law, if it can go wrong it will), making it so that the foundation of his knowledge is internal, not external.  According to Descartes, you can doubt your senses, meaning that they can't be at the foundation of an indubitable knowledge structure. He gives us two ways, with the second stronger than the first.
+Given the times Descartes was living in, with the rise of empirical science (the idea that knowledge is primarily gained from the senses, through experience and experiments), Descartes wanted to show that the fundamental basis for this knowledge was actually grounded in knowledge you can gain without appealing to your senses, called \emph{a priori} knowledge. So, he turns to whether one can doubt their senses. To get this off the ground, Descartes needs a way of getting rid of knowledge through your senses, as in, knowledge via experience. This means he needs a systematic way of making a worst case scenario (think Murphy's Law, if it can go wrong it will), making it so that the foundation of his knowledge is internal, not external.  According to Descartes, you can doubt your senses, meaning that they can't be at the foundation of an indubitable knowledge structure. He gives us two ways, with the second stronger than the first.
 \begin{enumerate}
     \item What if he is having a really realistic dream? (this is in sections 6-8)
     \item What if he is under the influence of some evil demon? (this is in sections 9-12)
@@ -69,9 +69,9 @@ The third section of this meditation gives us a basis for making the claim that 
 
 \factoidbox{Everything that I have held with certainty, I have gotten through my senses. But, I know that my senses have sometime misled me; as a general rule, you should not trust something (100\%) if it has lied to you.}
 
-Every generation or so has a movie or show which draws inspiration from Descartes' Meditations or Plato's Cave (they both use similar thought experiments, but draw different, though related, conclusions. One great example is the first Matrix movie. So much inspiration was drawn that we have this little quote from Morpheus to Neo:
+Every generation or so has a movie or show which draws inspiration from Descartes' Meditations or Plato's Cave (they both use similar thought experiments, but draw different, though related, conclusions). One great example is the first Matrix movie. So much inspiration was drawn that we have this little quote from Morpheus to Neo:
 
-\factoidbox{Morpheus: Have you ever had a dream, Neo, that you were so sure was real? What if you were unable to wake from that dream? How would you know the difference between the dream world and the real world?}
+\factoidbox{Morpheus: Have you ever had a dream, Neo, that you were so sure was real? What if you were unable to wake from that dream? How would you know the difference between the dream world and the real world?\autocite{Matrix1}}
 
 The point here is that we could be deceiving ourselves, what if we are having a really, super, realistic dream? It would seem that, then, we couldn't trust our senses, rather what we experience would be an illusion.
 
@@ -167,15 +167,15 @@ Some might try to answer the question ``what is knowledge?'' with a relatively s
 
 \factoidbox{Recently, my little brother and I were binging the show Dragon Ball Z. My little brother came to me with a theory about the time travel based plots in the show.  As an expert on theories of time travel, I thought this was great. He came up with the idea that there had to be four different timelines, given what he had seen thus far. Explaining that there had to be two different versions of the same character and so forth. As it turns out, he was correct, there did need to be two different versions of that character and there needed to be 4 timelines, but for completely different reasons than the ones he laid out. He later said that it didn't feel like he was correct, something was missing.}
 
-I quickly recognized what was missing: adequate \gls{justification}. The structure of his reasoning, though it lead to the correct answer, wasn't accurate. As a result, merely being correct is not enough for us to claim that we knew it. At the same time, merely having reasons to think that the belief is true is not enough to say that you knew it. You don't need to think very hard to come up with examples where a person's reasoning was flawed and that lead them to think they knew when they did not. In Philosophy, there is a long history of problems about justification called Gettier Problems, after the author of the most famous paper on this topic, Edmund Gettier.\footnote{This paper was so successful that Edmund Gettier did not feel the need to write another, this is his one and only paper. \autocite{Gettier1}} Here is a slight re-imagining of one of the thought experiments which likely inspired Gettier from the Austrian philosopher Alexius Meinong: 
+I quickly recognized what was missing: adequate \gls{justification}. The structure of his reasoning, though it lead to the correct answer, wasn't accurate. As a result, merely being correct is not enough for us to claim that we knew it. At the same time, merely having reasons to think that the belief is true is not enough to say that you knew it. One could have reasons and those reasons could be reasonalby good under normal circumstances but something unbeknownst to you `throws a wrench into it', so to speak. 
+
+You don't need to think very hard to come up with examples where a person's reasoning was flawed and that lead them to think they knew when they did not. In Philosophy, there is a long history of problems about justification called Gettier Problems, after the author of the most famous paper on this topic, Edmund Gettier.\footnote{This paper was so successful that Edmund Gettier did not feel the need to write another, this is his one and only paper. \autocite{Gettier1}} Here is a slight re-imagining of one of the thought experiments which likely inspired Gettier from the Austrian philosopher Alexius Meinong: 
 
 \thoughtex{The Park Violinist}{Imagine that you live near a park and most days at noon, a violinist plays. You can hear the beautiful music from your dinning room and, it seems right to say that if you hear the music, then you know that the violinist is playing. However, one day, because you, unknowingly, drank some bad tea, at noon, you go temporarily deaf and have an auditory hallucination of a violin playing. While it is true that the violinist is out there and you hear the music, does it follow that you know the violinist is out there?}{parkviolinist.jpg}{A man playing the violin inside of a park.}
 
-For cases like these, most people would say that, though you were right, you don't know that the violinist is playing. The reason, as before, is that there was something wrong with the justification.\footnote{For a comprehensive history of these Gettier Problems, see Roderick Chisholm's Theory of Knowledge, Third Edition (it must be the third, the earlier editions lacked this content). The Park Violinist case I give above is based on Meinong's case involving an Aeolian harp, which is presented there. \autocite[p. 91-99]{Chisholm1}} 
+In this case, much like the one involving my little brother and Dragon Ball Z, the person (you) has reasons to think that something is the case, they believe that it is the case, and it happens to be the case, so they have True Justified Belief. For cases like these, most people would say that, though you were right, you don't know that the violinist is playing. The issue comes from the fact that the reasoning, the justification, went awry in some way.\footnote{For a comprehensive history of these Gettier Problems, see Roderick Chisholm's Theory of Knowledge, Third Edition (it must be the third, the earlier editions lacked this content). The Park Violinist case I give above is based on Meinong's case involving an Aeolian harp, which is presented there. \autocite[p. 91-99]{Chisholm1}} One of the lively areas of Epistemology today is figuring out ways to `degettierize' the justification to avoid cases where failing to track accurately or having `false lemmas' allow for knowledge claims.\footnote{See \citetitle{Ichikawa1} for some more content on this, especially sections 3 and 4. This article refers to this additional element to True Justified Belief as `degetttiering' but earlier editions of the article called it `degettierize'. }
 
-It should be noted that 100\% certainty, no chance of being wrong, is not necessarily required for justification. For example, in a real world case, you can know that your sink isn't leaking without being in the room with the sink. There is a chance you are wrong, given your evidence. Justification can come in degrees and the more justified a belief is, then the more likely it is to be accurate/true. In the violinist example, experience and prior evidence certainly gives ample justification for knowledge in most cases, but you would have had the same evidence if the violinist had been sick and unable to play. This is why good critical thinkers question, doubt, or even reject beliefs if they lack adequate justification.
-
-We see that the that the real area of debate, what really separates knowledge from a lucky belief, is the justification. As a result, much of the debate in Epistemology centers around the standards for justification. If you believe something and that thing happens to be true, what else is needed for you to know it? Examples like this can be found all over the place, where you were correct, but for totally unexpected reasons. This is why good critical thinkers look deeply at the structure of their justification, how their beliefs relate to each other, which also calls back to one of Socrates' core questions; what is your evidence?
+We see that the real area of debate, what really separates knowledge from a lucky belief, is the justification. As a result, much of the debate in Epistemology centers around the standards for justification. If you believe something and that thing happens to be true, what else is needed for you to know it? It should be noted, however, that 100\% certainty, no chance of being wrong, is not necessarily required for justification. For example, in a real world case, you can know that your sink isn't leaking without being in the room with the sink. There is a chance you are wrong, given your evidence. Justification can come in degrees and the more justified a belief is, then the more likely it is to be accurate/true. In the violinist example, experience and prior evidence certainly gives ample justification for knowledge in most cases, but you would have had the same evidence if the violinist had been sick and unable to play. This is why good critical thinkers question, doubt, or even reject beliefs if they lack adequate justification. This is also why good critical thinkers look deeply at the structure of their justification, how their beliefs relate to each other, which also calls back to one of Socrates' core questions; what is your evidence?
 
 
 
@@ -213,13 +213,13 @@ Notice that the reasoning and the beliefs used to justify my stance that the wea
 
 Foundational beliefs are your rock bottom, these aren't supported or justified by anything else. If your beliefs are structured in this way and you want to get at knowledge, certainty, then you need to look very closely at the foundational beliefs. These beliefs need to be self-evident, they are not  supported by other beliefs, they need to be strong enough to carry all the weight, all by themselves.  If you have any experience with construction, or Minecraft, this analogy will work nicely for you. The foundationalist thinks of the intellectual structure of knowledge, how the beliefs relate to each other, as a tall building. Buildings can take many different shapes, from tall towers to pyramids, to strange Brutalist architecture, with a small foundation and an expanding roof. But, at the end of the day, the foundation, the concrete slab it's built on, needs to be tough enough to take the weight. 
 
-Finding your foundational beliefs might require a little help, or a highly questioning mind. Little kids will often continually ask `why'. It could start with something fairly simple like `mommy, why is the sky blue?' and then you will answer with something accurate to the best of your knowledge, and then they will ask `why', you will reply, and they will ask `why' again, and again, and again. Eventually, you will get to a point where you just need to throw your hands up and say `that's just the way it is.' For example, last time I had this happen, I just stopped at `because some things exist and other things don't.' This final belief is your foundation. If you keep on digging, there's nothing left. Is this strong enough, on its own, to hold up the weight? In my weather forcast example, the foundations could be that my senses and memory are accurate (for those cases). Is that strong enough, all on its own? 
+Finding your foundational beliefs might require a little help, or a highly questioning mind. Little kids will often continually ask `why'. It could start with something fairly simple like `mommy, why is the sky blue?' and then you will answer with something accurate to the best of your knowledge, and then they will ask `why', you will reply, and they will ask `why' again, and again, and again. Eventually, you will get to a point where you just need to throw your hands up and say `that's just the way it is.' For example, last time I had this happen, I just stopped at `because some things exist and other things don't.' This final belief is your foundation. If you keep on digging, there's nothing left. Is this strong enough, on its own, to hold up the weight? In my weather forecast example, the foundations could be that my senses and memory are accurate (for those cases). Is that strong enough, all on its own? 
 
 Foundational beliefs tend to be very basic logical or experiential truths. For example, something like `my senses are accurate' or `if P implies Q and P is true, then Q is true', or that there can't be contradictions. These all can be used to build up a structure of beliefs, which, though possible to be inaccurate, still count as justification. Additionally, Foundationalism holds that the beliefs you have, if they are justified, cannot directly or indirectly justify themselves. This is to say that there cannot be circular justification. For example, take this strange structure of justification:
 
 \factoidbox{I believe that Mt. Rainer is an active volcano. I believe this because my middle school teacher told me so and I believe that she was accurate in her claim. I believe she was accurate in claiming this because I believe that Mt. Rainer is an active volcano.}
 
-Notice that the first and final beliefs in this structure of reasoning are the same. Ultimately, it does not reach out to anything more than my belief that Mt. Rainser is an active volcano. If someone explained their stance in this sort of way, most people would be, correctly, very skeptical of their reasoning. Some might claim, however, that circular reasoning like this is not always bad. This case, in isolation, is but if we add more beliefs and increase the network of beliefs, showing more connections, then the circles will improve rather than deminish the justification. 
+Notice that the first and final beliefs in this structure of reasoning are the same. Ultimately, it does not reach out to anything more than my belief that Mt. Rainser is an active volcano. If someone explained their stance in this sort of way, most people would be, correctly, very skeptical of their reasoning. Some might claim, however, that circular reasoning like this is not always bad. This case, in isolation, is but if we add more beliefs and increase the network of beliefs, showing more connections, then the circles will improve rather than diminish the justification. 
 
 \newglossaryentry{foundationalism}
 {
@@ -262,7 +262,7 @@ For example, consider a, probably young, person, Skie, who is unsure about the s
 
 At the same time, sometimes, we have cases where some evidence, an observation, just can't fit with a generalization we have made; sometimes, the evidence disproves our generalization. For example, suppose that after years of bird watching in states aside from Washington and seeing thousands of ravens, I generalize to the belief that all ravens are black. But, one day, while bird-watching in Washington, I spot two white ravens (yes, there is a beach in Washington with a family of white ravens). This will clearly conflict with my core belief that all ravens are black, but that's OK. After confirming that those are in fact ravens and doing my due diligence, I amend my belief to something like ``most ravens are black." But that is still fine with the Foundationalist, they would say that the process is still bottom-up.  
 
-Coherentism allows for our beliefs to shape our experiences, going `top down'. In these cases, the generalized beliefs justify our particular evidence. The generalized claims stick around by categorizing or making sense of our observations.This can be because of the biases which we have covered in this class or it could be because of other reasons. Coherentism claims that our observations can be `theory laden', or influenced by our general theories. For example, a person, Mary, strongly believes in miracles. When she sees, for example, a statue of Jesus with water dripping from the cheeks, Mary will instantly color her experience of the `weeping statue' as a miracle. Similarly, Norm, who strongly holds that miracles don't happen, will see such an event and reject it almost instantly as his eyes playing tricks on him or will jump to some explanation in order to explain the event. This is the kind of back and forth which Coherentism entails. People who strongly believe in Sasquatch are likely to see Sasquatch because their beliefs color their experience and their experience shapes their beliefs. In Mary's case, her belief that the weeping statue is a miracle justifies her stance that miracles happen and her stance that miracles happen justifies her stance that it was a miracle. In Norm's case, his belief that miracles don't happen justifies his belief that the weeping statue was not a miracle. 
+Coherentism allows for our beliefs to shape our experiences, going `top down'. In these cases, the generalized beliefs justify our particular evidence. The generalized claims stick around by categorizing or making sense of our observations. This can be because of the biases which we have covered in this class or it could be because of other reasons. Coherentism claims that our observations can be `theory laden', or influenced by our general theories. For example, a person, Mary, strongly believes in miracles. When she sees, for example, a statue of Jesus with water dripping from the cheeks, Mary will instantly color her experience of the `weeping statue' as a miracle. Similarly, Norm, who strongly holds that miracles don't happen, will see such an event and reject it almost instantly as his eyes playing tricks on him or will jump to some explanation in order to explain the event. This is the kind of back and forth which Coherentism entails. People who strongly believe in Sasquatch are likely to see Sasquatch because their beliefs color their experience and their experience shapes their beliefs. In Mary's case, her belief that the weeping statue is a miracle justifies her stance that miracles happen and her stance that miracles happen justifies her stance that it was a miracle. In Norm's case, his belief that miracles don't happen justifies his belief that the weeping statue was not a miracle. 
 
 
 \newglossaryentry{coherentism}
