--- a/modthree.tex
+++ b/modthree.tex
@@ -56,7 +56,7 @@ description={The stance in that the world consists of two general kinds of subst
 }
 \subsection{Ibn Sina's Floating/Flying Man Thought Experiment}
 
-The concepts and `building blocks' for the stance which became Substance Dualism have a long history in the western world, with different generations and even different cultures building off of each other to construct it. Some of the earliest accounts of it come from Plato (likely using Socrates as a mouthpiece for his own ideas). Plato held that everything in the physical world was an imperfect copy of the `forms' which existed independently of the physical world and that \emph{you} weren't your physical body, rather \emph{you} were this perfect form which continued after your death and my be reincarnated. After this, you have Aristotle, whose views have been very influential in the evolution of Christian and Islamic thought. Aristotle did not believe that everything was an imperfect copy of the forms, he didn’t believe in the forms (like this), rather held that they were names and properties embodied/expressed by physical entities. Aristotle did, however, hold that the intellect, the mind, was not embodied physically and was distinct from the physical world. The next great advancement came after the rise of Islam. The Islamic world got their hands on Aristotle's work and many absolutely loved it, creating the Islamic Golden Age, where Muslim regions were the intellectual center of the world. This is where we get Ibn Sina (980-1037)\footnote{Ibn Sina is often known to the rest of the wold by the name which his translators gave him, Avicenna.} and al-Ghazali (1056-1111). Sina argued that the mind and body must be separate using his Floating Man thought experiment and Ghazali refined this further for better merging into Islam. When Sina's and other's works were translated into Latin, they were very influential on St. Thomas Aquinas, who refined them to better fit within Christian thought.\footnote{In fact, in many paintings of Thomas Aquinas, you will see him in a throne or otherwise supported by many people, one of those people is almost always Ibn Sina.} But, taking a step back in time, let's take a look at Ibn Sina's argument for Substance Dualism: 
+The concepts and `building blocks' for the stance which became Substance Dualism have a long history in the western world, with different generations and even different cultures building off of each other to construct it. Some of the earliest accounts of it come from Plato (likely using Socrates as a mouthpiece for his own ideas). Plato held that everything in the physical world was an imperfect copy of the `forms' which existed independently of the physical world and that \emph{you} weren't your physical body, rather \emph{you} were this perfect form which continued after your death and my be reincarnated. After this, you have Aristotle, whose views have been very influential in the evolution of Christian and Islamic thought. Aristotle did not believe that everything was an imperfect copy of the forms, he didn’t believe in the forms (like this), rather held that they were names and properties embodied/expressed by physical entities. Aristotle did, however, hold that the intellect, the mind, was not embodied physically and was distinct from the physical world. The next great advancement came after the rise of Islam. The Islamic world got their hands on Aristotle's work and many absolutely loved it, creating the Islamic Golden Age, where Muslim regions were the intellectual center of the world. This is where we get Ibn Sina (980-1037)\footnote{Ibn Sina is often known to the rest of the wold by the name which his translators gave him, Avicenna.} and al-Ghazali (1056-1111). Sina argued that the mind and body must be separate using his Floating Man thought experiment and Ghazali refined this further for better merging into Islam. When Sina's and other's works were translated into Latin, they were very influential on St. Thomas Aquinas, who refined them to better fit within Christian thought.\footnote{In fact, in many paintings of Thomas Aquinas, you will see him in a throne or otherwise supported by many people, one of those people is almost always identified as Ibn Sina or another Muslim philosopher Ibn Rushd (Latinized as Averroes).} But, taking a step back in time, let's take a look at Ibn Sina's argument for Substance Dualism: 
 
 \thoughtex{The Floating Man}{One of us must suppose that he was just created at a stroke, fully developed and perfectly formed but with his vision shrouded from perceiving all external objects – created floating in the air or in the space, not buffeted by any perceptible current of the air that supports him, his limbs separated and kept out of contact with one another, so that they do not feel each other. Then let the subject consider whether he would affirm the existence of his self. There is no doubt that he would affirm his own existence, although not affirming the reality of any of his limbs or inner organs, his bowels, or heart or brain or any external thing. Indeed he would affirm the existence of this self of his while not affirming that it had any length, breadth or depth. And if it were possible for him in such a state to imagine a hand or any other organ, he would not imagine it to be a part of himself or a condition of his existence.\autocite[p.155-156]{Goodman1}}{floatingman.jpg}{The head of Ibn Sina floating in a sea of thoughts.}
 
@@ -165,7 +165,7 @@ Elisabeth\autocite[Originally written in French 6 May 1643.][p. 61-62]{Elisabeth
 }
 
 
-We should now extract this argument, put the propositions in an understandable order and see how the reasoning flows.\footnote{This is not to say that Princess Elisabeth's reasoning or phrasing is bad, far from it, we just need to remove the polite flowery language surounding the core thoughts to see the argument with clairity.} In this letter, also, are references to Descartes' Meditations on First Philosophy, which you will encounter later in Module \ref{ch.modsix},\footnote{Or, rather, you will encounter some of the relevant parts concerning Epistemology and this Mind-Body Problem.} so we should also ignore those references, as they are not relevant to the core point she is making. Her argument, extracted in this way, comes out like this:
+We should now extract this argument, put the propositions in an understandable order and see how the reasoning flows.\footnote{This is not to say that Princess Elisabeth's reasoning or phrasing is bad, far from it, we just need to remove the polite flowery language surrounding the core thoughts to see the argument with clarity.} In this letter, also, are references to Descartes' Meditations on First Philosophy, which you will encounter later in Module \ref{ch.modsix},\footnote{Or, rather, you will encounter some of the relevant parts concerning Epistemology and this Mind-Body Problem.} so we should also ignore those references, as they are not relevant to the core point she is making. Her argument, extracted in this way, comes out like this:
 
 \begin{earg}
      \item[1 ] If a physical substance moves, then it must have a cause.
@@ -285,13 +285,24 @@ Science Fiction is full of what we can use as examples for Strong AI. I have alr
 \section{Part \thechapcount.\theseccount: Roger Schank's AI}\stepcounter{seccount}
 Searle uses Roger Schank's AI as an example, because it's the one he's most familiar with. It should be noted that this AI is not special, but rather the basic way it works is found in AI even today, as I will explain in a moment. Schank's goal with this machine was to simulate how a person interprets a story when they're not given complete information. For example, take this story/question:
 
-    \thoughtex{Burnt Burger}{A man walks into a restaurant and orders a burger. It comes to him burnt to a crisp and  he storms out angrily without paying or leaving a tip. Did the man eat the burger?}{burntburger.jpg}{A man looking angry at a burnt burger.}
+    \thoughtex{Burnt Burger}{A man walks into a restaurant and orders a burger. 
+    
+    It comes to him burnt to a crisp and  he storms out angrily without paying or leaving a tip. 
+    
+    Did the man eat the burger?}{burntburger.jpg}{A man looking angry at a burnt burger.}
 
 An answer to this question is not given in the story; it's not like you were asked ``did he order a salad?" The answer is not spoon-fed to the machine or to us, rather we need to make logical conclusions given background information. In real life, many of the questions which we encounter do not contain all of the information which are necessary to answer them accurately. Most of the time, especially in the `real world', we are going to need to make certain jumps in our reasoning based on background information. Such as our knowledge of normal human behavior.
 
 More than likely, you answered the above question with something like ``no, he didn't". The AI also generates the answer ``no". This is because the AI in the machine was programmed or trained with cases involving reasonable human behavior and made predictions based on those assumptions. Next, take the following story (starting the same way):
 
-    \thoughtex{Nice Burger}{A man walks into a restaurant and orders a burger. When it arrives, he is pleased with it and leaves a large tip before paying his bill. Did he eat the burger?}{Goodburger.jpg}{A man looking pleased with a pleasant looking burger.}
+    \thoughtex{Nice Burger}{A man walks into a restaurant and orders a burger. 
+    
+    When it arrives, he is pleased with it and leaves a large tip before paying his bill and thanking the waiter. 
+    
+    Did he eat the burger?
+
+     
+           }{Goodburger.jpg}{A man looking pleased with a pleasant looking burger.}
 
 Yet again, the answer is not spoon-fed to the machine or to you. Rather, we need to use some background information. While it is possible that the man did eat the burger in the first case and did not in the second, this is far from likely. You probably answered the second question with ``yes, he did". Similarly, the AI also says ``yes". In this case, too, we are relying on our training and experience in dealing with real world situations, our past. If, for example, we had trained the machine or a baby with only experiences which were the opposite of the normal, then the baby and the machine would likely generate the opposite responses to us with our normal upbringing. 
 
